@@ -20,8 +20,8 @@
 #include "DataFormats/Common/interface/Handle.h"
 #include "DataFormats/JetReco/interface/JetCollection.h"
 #include "DataFormats/Candidate/interface/CandidateFwd.h"
-
-#include "PhysicsTools/Utilities/interface/deltaR.h"
+//#include "DataFormats/Math/interface/deltaR.h" // 31X+
+#include "PhysicsTools/Utilities/interface/deltaR.h" // 22X & 31X
 
 #include <memory>
 #include <vector>
